# orion-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
agent/: config.py  embeddings.py  graph.py  guard.py  prompts.py  voice.py
agent/tools/: __init__.py  escalation_tool.py  rag_tool.py  sql_tool.py
api/: main.py  schemas.py
data/policies/: payments_faq.md  return_policy.md  shipping_policy.md  warranty_policy.md
eval/: dataset.json  judge.py  orion-v9-summary.json  orion-v9.json  run_eval.py
frontend/: .env.example  Dockerfile  STYLE.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AudioPlayer.tsx  ChatPanel.tsx  Message.tsx  SampleQuestions.tsx  ThemeToggle.tsx  TraceSidebar.tsx  VoiceRecorder.tsx
frontend/lib/: api.ts  types.ts
ingestion/: chunker.py  ingest.py  load_customer_data.py
scripts/: auth_gmail.py
src/: chunker.py
tests/: test_api.py  test_escalation_tool.py  test_guard.py  test_rag_tool.py  test_routing.py  test_sql_validation.py  test_voice.py
ui/: app.py
