[project]
name = "orion-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.7.4",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "langchain-core>=1.2.20",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.48",
    "sqlparse>=0.5.5",
]

[project.scripts]
chunker = "ingestion.chunker:main"
