[project]
name = "orion-agent"
version = "0.1.0"
description = "Production-ready AI customer support agent for e-commerce, built with LangGraph, Qdrant, and Supabase"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "elevenlabs>=1.7.0",
    "fastapi>=0.115.0",
    "fastembed>=0.7.4",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "groq>=0.13.0",
    "langchain-core>=1.2.20",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite",
    "langsmith>=0.7.22",
    "pandas>=1.3.0",
    "python-multipart>=0.0.18",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "ragas",
    "sqlalchemy>=2.0.48",
    "sqlparse>=0.5.5",
    "streamlit>=1.35.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
chunker = "ingestion.chunker:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
